# jumpdrive

./: .cproject  .project  CMakeLists.txt  build.yml  build_version.json  compile_ui.sh
.github/workflows/: jumpdrive.yml
inc/: CustomFunction.h  CustomOperator.h  FunctionToken.h  OperatorToken.h  ValueSet.h  VariableToken.h
main/: main.cpp
src/: CMakeLists.txt  ExpressionBuilder.cpp  FunctionToken.cpp  OperatorToken.cpp  RPNConverter.cpp  RPNExpression.cpp  Tokenizer.cpp  ValueSet.cpp
src/jumpdrive/: ArithmeticException.h  CustomOperator.h  ExpressionBuilder.cpp  ExpressionBuilder.h  OperatorToken.h  RPNExpression.cpp  RPNExpression.h  ResultSet.cpp  ResultSet.h  Token.h  commondefs.h  jumpdrivedefs.h
src/main/: CTeslaApp.cpp  CTeslaApp.h  commondef.h  main.cpp
src/ui/: main_window.cpp
ui/: filelist  main_window.ui
